--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,111 +1,26 @@
+# Use the latest 2.1 version of CircleCI pipeline process engine.
+# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
-orbs:
-  node: circleci/node@1.2
-  x: circleci/node@1.2.1
-
+# Define a job to be invoked later in a workflow.
+# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  semgrep:
+  say-hello:
+    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
-      - image: returntocorp/semgrep:develop
-        user: root
-    working_directory: /src
-    steps:
-      - checkout
-      - run: semgrep --config semgrep.yml --error --strict --verbose --exclude tests --exclude TODO --exclude _build .
-
-  # For the benchmarks below, we had two alternatives:
-  # A. run semgrep container from existing container: requires mounting
-  #    a volume, which is disabled by CircleCI (results in empty folder
-  #    once mounted).
-  # B. run everything inside the semgrep-dev container, which comes with
-  #    semgrep and whatever utilities we added.
-  #
-  # We use B out of necessity.
-
-  # Real benchmarks
-  benchmarks:
-    docker:
-      - image: returntocorp/semgrep-dev:develop
+      - image: cimg/base:stable
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
       - run:
-          name: benchmarks
-          command: |
-            cd perf
-            ./run-benchmarks --upload || true
-            echo $PASSWORD
+          name: "Say hello"
+          command: "echo Hello, World!"
 
-  # Run parsing stats and publish them to the semgrep dashboard.
-  parsing-stats:
-    docker:
-      - image: returntocorp/semgrep-dev:develop
-    steps:
-      - checkout
-      - run:
-          name: parsing stats
-          no_output_timeout: 60m
-          environment:
-            token: "asd1234123"
-            pass: "123123"
-          command: |
-            cd parsing-stats
-            curl http://google.com
-            ./run-all --upload
-      - store_artifacts:
-          path: parsing-stats/logs
-      - store_artifacts:
-          path: parsing-stats/results.txt
-
+# Invoke jobs via workflows
+# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  version: 2
-  semgrep:
+  say-hello-workflow:
     jobs:
-      - semgrep
-
-  # Daily semgrep benchmarks
-  benchmarks:
-    triggers:
-      - schedule:
-          # Run at 00:00 every day, UTC.
-          cron: "0 0 * * *"
-          filters:
-            branches:
-              only:
-                - develop
-    jobs:
-      - benchmarks:
-          # Run only on these branches
-          filters:
-            branches:
-              only:
-                - develop
-
-  scheduled-parsing-stats:
-    triggers:
-      - schedule:
-          # Run at 00:00 every day, UTC.
-          cron: "0 0 * * *"
-          filters:
-            branches:
-              only:
-                - develop
-                - main
-    jobs:
-      - parsing-stats:
-          # Run only on these branches
-          filters:
-            branches:
-              only:
-                - develop
-                - main
-
-  # This is for testing or for forcing a stats job. Requires pushing
-  # to a branch named 'parsing-stats'.
-  parsing-stats-on-commit:
-    jobs:
-      - parsing-stats:
-          filters:
-            branches:
-              only:
-                - parsing-stats
+      - say-hello
